--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <div class="sidebar-logo">
     <!-- Logo Header -->
     <div class="logo-header" data-background-color="dark">
-      <a href="index.html" class="logo">
+      <a [routerLink]="['dashboard']" class="logo">
         <img
           src="assets/img/kaiadmin/logo_light.svg"
           alt="navbar brand"
@@ -27,33 +27,38 @@
   <div class="sidebar-wrapper scrollbar scrollbar-inner">
     <div class="sidebar-content">
       <ul class="nav nav-secondary">
+
         <li class="nav-item active">
           <a
+            [routerLink]="['dashboard']"
             data-bs-toggle="collapse"
-            href="#dashboard"
             class="collapsed"
             aria-expanded="false"
           >
             <i class="fas fa-home"></i>
             <p>Dashboard</p>
-            <span class="caret"></span>
           </a>
-          <div class="collapse" id="dashboard">
-            <ul class="nav nav-collapse">
-              <li>
-                <a href="../demo1/index.html">
-                  <span class="sub-item">Dashboard 1</span>
-                </a>
-              </li>
-            </ul>
-          </div>
         </li>
+
         <li class="nav-section">
                 <span class="sidebar-mini-icon">
                   <i class="fa fa-ellipsis-h"></i>
                 </span>
-          <h4 class="text-section">Components</h4>
+          <h4 class="text-section">Admin</h4>
         </li>
+
+        <li class="nav-item active">
+          <a
+            [routerLink]="['user-list']"
+            data-bs-toggle="collapse"
+            class="collapsed"
+            aria-expanded="false"
+          >
+            <i class="fas fa-user"></i>
+            <p>Users</p>
+          </a>
+        </li>
+
         <li class="nav-item">
           <a data-bs-toggle="collapse" href="#base">
             <i class="fas fa-layer-group"></i>
