--- a/src/app/admin/user/user-create/user-create.component.html
+++ b/src/app/admin/user/user-create/user-create.component.html
@@ -1,1 +1,356 @@
-<p>user-create works!</p>
+
+
+<div class="post d-flex flex-column-fluid" id="kt_post">
+
+  <div id="kt_content_container" class="container">
+
+    <div class="d-flex flex-column flex-lg-row">
+
+      <div class="flex-lg-row-fluid mb-10 mb-lg-0 me-lg-7 me-xl-10">
+
+        <div class="card">
+
+          <div class="card-body p-12">
+
+            <form action="" id="kt_invoice_form">
+
+              <div class="d-flex flex-column align-items-start flex-xxl-row">
+
+                <div class="d-flex align-items-center flex-equal fw-row me-4 order-2" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Specify invoice date">
+
+                  <div class="fs-6 fw-bolder text-gray-700 text-nowrap">Date:</div>
+
+
+                  <div class="position-relative d-flex align-items-center w-150px">
+
+                    <input class="form-control form-control-white fw-bolder pe-5" placeholder="Select date" name="invoice_date" />
+
+
+
+                    <span class="svg-icon svg-icon-2 position-absolute ms-4 end-0">
+																	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+																		<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																			<polygon points="0 0 24 0 24 24 0 24" />
+																			<path d="M6.70710678,15.7071068 C6.31658249,16.0976311 5.68341751,16.0976311 5.29289322,15.7071068 C4.90236893,15.3165825 4.90236893,14.6834175 5.29289322,14.2928932 L11.2928932,8.29289322 C11.6714722,7.91431428 12.2810586,7.90106866 12.6757246,8.26284586 L18.6757246,13.7628459 C19.0828436,14.1360383 19.1103465,14.7686056 18.7371541,15.1757246 C18.3639617,15.5828436 17.7313944,15.6103465 17.3242754,15.2371541 L12.0300757,10.3841378 L6.70710678,15.7071068 Z" fill="#000000" fill-rule="nonzero" transform="translate(12.000003, 11.999999) rotate(-180.000000) translate(-12.000003, -11.999999)" />
+																		</g>
+																	</svg>
+																</span>
+
+
+                  </div>
+
+                </div>
+
+
+                <div class="d-flex flex-center flex-equal fw-row text-nowrap order-1 order-xxl-2 me-4" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Enter invoice number">
+                  <span class="fs-2x fw-bolder text-gray-800">Invoice #</span>
+                  <input type="text" class="form-control form-control-flush fw-bolder text-muted fs-3 w-125px" value="2021001" placehoder="..." />
+                </div>
+
+
+                <div class="d-flex align-items-center justify-content-end flex-equal order-3 fw-row" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Specify invoice due date">
+
+                  <div class="fs-6 fw-bolder text-gray-700 text-nowrap">Due Date:</div>
+
+
+                  <div class="position-relative d-flex align-items-center w-150px">
+
+                    <input class="form-control form-control-white fw-bolder pe-5" placeholder="Select date" name="invoice_due_date" />
+
+
+
+                    <span class="svg-icon svg-icon-2 position-absolute end-0 ms-4">
+																	<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+																		<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																			<polygon points="0 0 24 0 24 24 0 24" />
+																			<path d="M6.70710678,15.7071068 C6.31658249,16.0976311 5.68341751,16.0976311 5.29289322,15.7071068 C4.90236893,15.3165825 4.90236893,14.6834175 5.29289322,14.2928932 L11.2928932,8.29289322 C11.6714722,7.91431428 12.2810586,7.90106866 12.6757246,8.26284586 L18.6757246,13.7628459 C19.0828436,14.1360383 19.1103465,14.7686056 18.7371541,15.1757246 C18.3639617,15.5828436 17.7313944,15.6103465 17.3242754,15.2371541 L12.0300757,10.3841378 L6.70710678,15.7071068 Z" fill="#000000" fill-rule="nonzero" transform="translate(12.000003, 11.999999) rotate(-180.000000) translate(-12.000003, -11.999999)" />
+																		</g>
+																	</svg>
+																</span>
+
+
+                  </div>
+
+                </div>
+
+              </div>
+
+
+              <div class="separator separator-dashed my-10"></div>
+
+
+              <div class="mb-0">
+
+                <div class="row gx-10 mb-5">
+
+                  <div class="col-lg-6">
+                    <label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Bill From</label>
+
+                    <div class="mb-5">
+                      <input type="text" class="form-control form-control-solid" placeholder="Name" />
+                    </div>
+
+
+                    <div class="mb-5">
+                      <input type="text" class="form-control form-control-solid" placeholder="Email" />
+                    </div>
+
+
+                    <div class="mb-5">
+                      <textarea name="notes" class="form-control form-control-solid" rows="3" placeholder="Who is this invoice from?"></textarea>
+                    </div>
+
+                  </div>
+
+
+                  <div class="col-lg-6">
+                    <label class="form-label fs-6 fw-bolder text-gray-700 mb-3">Bill To</label>
+
+                    <div class="mb-5">
+                      <input type="text" class="form-control form-control-solid" placeholder="Name" />
+                    </div>
+
+
+                    <div class="mb-5">
+                      <input type="text" class="form-control form-control-solid" placeholder="Email" />
+                    </div>
+
+
+                    <div class="mb-5">
+                      <textarea name="notes" class="form-control form-control-solid" rows="3" placeholder="What is this invoice for?"></textarea>
+                    </div>
+
+                  </div>
+
+                </div>
+
+
+                <div class="table-responsive mb-10">
+
+                  <table class="table g-5 gs-0 mb-0 fw-bolder text-gray-700" data-kt-element="items">
+
+                    <thead>
+                    <tr class="border-bottom fs-7 fw-bolder text-gray-700 text-uppercase">
+                      <th class="min-w-300px w-475px">Item</th>
+                      <th class="min-w-100px w-100px">QTY</th>
+                      <th class="min-w-150px w-150px">Price</th>
+                      <th class="min-w-100px w-150px text-end">Total</th>
+                      <th class="min-w-75px w-75px text-end">Action</th>
+                    </tr>
+                    </thead>
+
+
+                    <tbody>
+                    <tr class="border-bottom border-bottom-dashed" data-kt-element="item">
+                      <td class="pe-7">
+                        <input type="text" class="form-control form-control-solid mb-2" name="name[]" placeholder="Item name" />
+                        <input type="text" class="form-control form-control-solid" name="description[]" placeholder="Description" />
+                      </td>
+                      <td class="ps-0">
+                        <input class="form-control form-control-solid" type="number" min="1" name="quantity[]" placeholder="1" value="1" data-kt-element="quantity" />
+                      </td>
+                      <td>
+                        <input type="text" class="form-control form-control-solid text-end" name="price[]" placeholder="0.00" value="0.00" data-kt-element="price" />
+                      </td>
+                      <td class="pt-8 text-end text-nowrap">$
+                        <span data-kt-element="total">0.00</span></td>
+                      <td class="pt-5 text-end">
+                        <button type="button" class="btn btn-sm btn-icon btn-active-color-primary" data-kt-element="remove-item">
+
+                          <span class="svg-icon svg-icon-3">
+																					<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+																						<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																							<rect x="0" y="0" width="24" height="24" />
+																							<path d="M6,8 L6,20.5 C6,21.3284271 6.67157288,22 7.5,22 L16.5,22 C17.3284271,22 18,21.3284271 18,20.5 L18,8 L6,8 Z" fill="#000000" fill-rule="nonzero" />
+																							<path d="M14,4.5 L14,4 C14,3.44771525 13.5522847,3 13,3 L11,3 C10.4477153,3 10,3.44771525 10,4 L10,4.5 L5.5,4.5 C5.22385763,4.5 5,4.72385763 5,5 L5,5.5 C5,5.77614237 5.22385763,6 5.5,6 L18.5,6 C18.7761424,6 19,5.77614237 19,5.5 L19,5 C19,4.72385763 18.7761424,4.5 18.5,4.5 L14,4.5 Z" fill="#000000" opacity="0.3" />
+																						</g>
+																					</svg>
+																				</span>
+
+                        </button>
+                      </td>
+                    </tr>
+                    </tbody>
+
+
+                    <tfoot>
+                    <tr class="border-top border-top-dashed align-top fs-6 fw-bolder text-gray-700">
+                      <th class="text-primary">
+                        <button class="btn btn-link py-1" data-kt-element="add-item">Add item</button>
+                      </th>
+                      <th colspan="2" class="border-bottom border-bottom-dashed ps-0">
+                        <div class="d-flex flex-column align-items-start">
+                          <div class="fs-5">Subtotal</div>
+                          <button class="btn btn-link py-1" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Coming soon">Add tax</button>
+                          <button class="btn btn-link py-1" data-bs-toggle="tooltip" data-bs-trigger="hover" title="Coming soon">Add discount</button>
+                        </div>
+                      </th>
+                      <th colspan="2" class="border-bottom border-bottom-dashed text-end">$
+                        <span data-kt-element="sub-total">0.00</span></th>
+                    </tr>
+                    <tr class="align-top fw-bolder text-gray-700">
+                      <th></th>
+                      <th colspan="2" class="fs-4 ps-0">Total</th>
+                      <th colspan="2" class="text-end fs-4 text-nowrap">$
+                        <span data-kt-element="grand-total">0.00</span></th>
+                    </tr>
+                    </tfoot>
+
+                  </table>
+                </div>
+
+
+                <table class="table d-none" data-kt-element="item-template">
+                  <tr class="border-bottom border-bottom-dashed" data-kt-element="item">
+                    <td class="pe-7">
+                      <input type="text" class="form-control form-control-solid mb-2" name="name[]" placeholder="Item name" />
+                      <input type="text" class="form-control form-control-solid" name="description[]" placeholder="Description" />
+                    </td>
+                    <td class="ps-0">
+                      <input class="form-control form-control-solid" type="number" min="1" name="quantity[]" placeholder="1" data-kt-element="quantity" />
+                    </td>
+                    <td>
+                      <input type="text" class="form-control form-control-solid text-end" name="price[]" placeholder="0.00" data-kt-element="price" />
+                    </td>
+                    <td class="pt-8 text-end">$
+                      <span data-kt-element="total">0.00</span></td>
+                    <td class="pt-5 text-end">
+                      <button type="button" class="btn btn-sm btn-icon btn-active-color-primary" data-kt-element="remove-item">
+
+                        <span class="svg-icon svg-icon-3">
+																			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+																				<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																					<rect x="0" y="0" width="24" height="24" />
+																					<path d="M6,8 L6,20.5 C6,21.3284271 6.67157288,22 7.5,22 L16.5,22 C17.3284271,22 18,21.3284271 18,20.5 L18,8 L6,8 Z" fill="#000000" fill-rule="nonzero" />
+																					<path d="M14,4.5 L14,4 C14,3.44771525 13.5522847,3 13,3 L11,3 C10.4477153,3 10,3.44771525 10,4 L10,4.5 L5.5,4.5 C5.22385763,4.5 5,4.72385763 5,5 L5,5.5 C5,5.77614237 5.22385763,6 5.5,6 L18.5,6 C18.7761424,6 19,5.77614237 19,5.5 L19,5 C19,4.72385763 18.7761424,4.5 18.5,4.5 L14,4.5 Z" fill="#000000" opacity="0.3" />
+																				</g>
+																			</svg>
+																		</span>
+
+                      </button>
+                    </td>
+                  </tr>
+                </table>
+                <table class="table d-none" data-kt-element="empty-template">
+                  <tr data-kt-element="empty">
+                    <th colspan="5" class="text-muted text-center py-10">No items</th>
+                  </tr>
+                </table>
+
+
+                <div class="mb-0">
+                  <label class="form-label fs-6 fw-bolder text-gray-700">Notes</label>
+                  <textarea name="notes" class="form-control form-control-solid" rows="3" placeholder="Thanks for your business"></textarea>
+                </div>
+
+              </div>
+
+            </form>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+      <div class="flex-lg-auto min-w-lg-300px">
+
+        <div class="card" data-kt-sticky="true" data-kt-sticky-name="invoice" data-kt-sticky-offset="{default: false, lg: '200px'}" data-kt-sticky-width="{lg: '250px', lg: '300px'}" data-kt-sticky-left="auto" data-kt-sticky-top="150px" data-kt-sticky-animation="false" data-kt-sticky-zindex="95">
+
+          <div class="card-body p-10">
+
+            <div class="mb-10">
+
+              <label class="form-label fw-bolder fs-6 text-gray-700">Currency</label>
+
+
+              <select name="currnecy" aria-label="Select a Timezone" data-control="select2" data-placeholder="Select currency" class="form-select form-select-solid">
+                <option value=""></option>
+                <option data-kt-flag="flags/united-states.svg" value="USD">
+                  <b>USD</b>&#160;-&#160;USA dollar</option>
+                <option data-kt-flag="flags/united-kingdom.svg" value="GBP">
+                  <b>GBP</b>&#160;-&#160;British pound</option>
+                <option data-kt-flag="flags/australia.svg" value="AUD">
+                  <b>AUD</b>&#160;-&#160;Australian dollar</option>
+                <option data-kt-flag="flags/japan.svg" value="JPY">
+                  <b>JPY</b>&#160;-&#160;Japanese yen</option>
+                <option data-kt-flag="flags/sweden.svg" value="SEK">
+                  <b>SEK</b>&#160;-&#160;Swedish krona</option>
+                <option data-kt-flag="flags/canada.svg" value="CAD">
+                  <b>CAD</b>&#160;-&#160;Canadian dollar</option>
+                <option data-kt-flag="flags/switzerland.svg" value="CHF">
+                  <b>CHF</b>&#160;-&#160;Swiss franc</option>
+              </select>
+
+            </div>
+
+
+            <div class="separator separator-dashed mb-8"></div>
+
+
+            <div class="mb-8">
+
+              <label class="form-check form-switch form-switch-sm form-check-custom form-check-solid flex-stack mb-5">
+                <span class="form-check-label ms-0 fw-bolder fs-6 text-gray-700">Payment method</span>
+                <input class="form-check-input" type="checkbox" checked="checked" value="" />
+              </label>
+
+
+              <label class="form-check form-switch form-switch-sm form-check-custom form-check-solid flex-stack mb-5">
+                <span class="form-check-label ms-0 fw-bolder fs-6 text-gray-700">Late fees</span>
+                <input class="form-check-input" type="checkbox" value="" />
+              </label>
+
+
+              <label class="form-check form-switch form-switch-sm form-check-custom form-check-solid flex-stack">
+                <span class="form-check-label ms-0 fw-bolder fs-6 text-gray-700">Notes</span>
+                <input class="form-check-input" type="checkbox" value="" />
+              </label>
+
+            </div>
+
+
+            <div class="separator separator-dashed mb-8"></div>
+
+
+            <div class="mb-0">
+
+              <div class="row mb-5">
+
+                <div class="col">
+                  <a href="#" class="btn btn-light btn-active-light-primary w-100">Preview</a>
+                </div>
+
+
+                <div class="col">
+                  <a href="#" class="btn btn-light btn-active-light-primary w-100">Download</a>
+                </div>
+
+              </div>
+
+              <button type="submit" href="#" class="btn btn-primary w-100" id="kt_invoice_submit_button">
+
+                <span class="svg-icon svg-icon-3">
+														<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1">
+															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																<rect x="0" y="0" width="24" height="24" />
+																<path d="M14,13.381038 L14,3.47213595 L7.99460483,15.4829263 L14,13.381038 Z M4.88230018,17.2353996 L13.2844582,0.431083506 C13.4820496,0.0359007077 13.9625881,-0.12427877 14.3577709,0.0733126292 C14.5125928,0.15072359 14.6381308,0.276261584 14.7155418,0.431083506 L23.1176998,17.2353996 C23.3152912,17.6305824 23.1551117,18.1111209 22.7599289,18.3087123 C22.5664522,18.4054506 22.3420471,18.4197165 22.1378777,18.3482572 L14,15.5 L5.86212227,18.3482572 C5.44509941,18.4942152 4.98871325,18.2744737 4.84275525,17.8574509 C4.77129597,17.6532815 4.78556182,17.4288764 4.88230018,17.2353996 Z" fill="#000000" fill-rule="nonzero" transform="translate(14.000087, 9.191034) rotate(-315.000000) translate(-14.000087, -9.191034)" />
+															</g>
+														</svg>
+													</span>
+                Send Invoice</button>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+
