--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -1,47 +1,231 @@
-<app-page-header [pageTitle]="pageTitle" [breadcrumbs]="breadcrumbs"></app-page-header>
-<div class="row">
-  <div class="col-md-12">
+<div class="post d-flex flex-column-fluid" id="kt_post">
+
+  <div class="container" id="kt_content_container">
+
     <div class="card">
-      <div class="card-body">
-        <!--<div class="card-sub">
-          Caption
-        </div>-->
-        <div class="table-responsive">
-          <table class="table table-bordered table-hover">
-            <thead>
-            <tr>
-              <th>SL</th>
-              <th>Name</th>
-              <th>Contact No.</th>
-              <th>Email</th>
-              <th>Address</th>
-              <th>Status</th>
-              <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let user of users; let i = index;">
-              <th scope="row">{{ i + 1 }}</th>
-              <td>{{ user.getFullName() || '-' }}</td>
-              <td>{{ user.cell || '-' }}</td>
-              <td>{{ user.email || '-' }}</td>
-              <td>{{ user.address || '-' }}</td>
-              <td>{{ user.status || '-' }}</td>
-              <td>
-                <div class="button-group">
-                  <button (click)="editUser(user.id)" class="btn btn-warning btn-sm">
-                    <i class="fa fa-edit"></i> Edit
+
+      <div class="card-header border-0 pt-6">
+
+        <div class="card-title">
+
+          <div class="d-flex align-items-center position-relative my-1">
+
+            <span class="svg-icon svg-icon-1 position-absolute ms-6">
+													<svg height="24px"
+                               version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+														<g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
+															<rect height="24" width="24" x="0" y="0"/>
+															<path
+                                d="M14.2928932,16.7071068 C13.9023689,16.3165825 13.9023689,15.6834175 14.2928932,15.2928932 C14.6834175,14.9023689 15.3165825,14.9023689 15.7071068,15.2928932 L19.7071068,19.2928932 C20.0976311,19.6834175 20.0976311,20.3165825 19.7071068,20.7071068 C19.3165825,21.0976311 18.6834175,21.0976311 18.2928932,20.7071068 L14.2928932,16.7071068 Z"
+                                fill="#000000" fill-rule="nonzero" opacity="0.3"/>
+															<path
+                                d="M11,16 C13.7614237,16 16,13.7614237 16,11 C16,8.23857625 13.7614237,6 11,6 C8.23857625,6 6,8.23857625 6,11 C6,13.7614237 8.23857625,16 11,16 Z M11,18 C7.13400675,18 4,14.8659932 4,11 C4,7.13400675 7.13400675,4 11,4 C14.8659932,4 18,7.13400675 18,11 C18,14.8659932 14.8659932,18 11,18 Z"
+                                fill="#000000" fill-rule="nonzero"/>
+														</g>
+													</svg>
+												</span>
+
+            <input class="form-control form-control-solid w-250px ps-14" data-kt-user-table-filter="search"
+                   placeholder="Search user"
+                   type="text"/>
+          </div>
+
+        </div>
+
+
+        <div class="card-toolbar">
+
+          <div class="d-flex justify-content-end" data-kt-user-table-toolbar="base">
+
+            <button class="btn btn-light-primary me-3" data-kt-menu-flip="top-end" data-kt-menu-placement="bottom-end"
+                    data-kt-menu-trigger="click" type="button">
+
+              <span class="svg-icon svg-icon-2">
+													<svg height="24px"
+                               version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+														<g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
+															<rect height="24" width="24" x="0" y="0"/>
+															<path
+                                d="M5,4 L19,4 C19.2761424,4 19.5,4.22385763 19.5,4.5 C19.5,4.60818511 19.4649111,4.71345191 19.4,4.8 L14,12 L14,20.190983 C14,20.4671254 13.7761424,20.690983 13.5,20.690983 C13.4223775,20.690983 13.3458209,20.6729105 13.2763932,20.6381966 L10,19 L10,12 L4.6,4.8 C4.43431458,4.5790861 4.4790861,4.26568542 4.7,4.1 C4.78654809,4.03508894 4.89181489,4 5,4 Z"
+                                fill="#000000"/>
+														</g>
+													</svg>
+												</span>
+              Filter
+            </button>
+
+            <div class="menu menu-sub menu-sub-dropdown w-300px w-md-325px" data-kt-menu="true">
+
+              <div class="px-7 py-5">
+                <div class="fs-5 text-dark fw-bolder">Filter Options</div>
+              </div>
+
+
+              <div class="separator border-gray-200"></div>
+
+
+              <div class="px-7 py-5" data-kt-user-table-filter="form">
+
+                <div class="mb-10">
+                  <label class="form-label fs-6 fw-bold">Role:</label>
+                  <select class="form-select form-select-solid fw-bolder" data-allow-clear="true"
+                          data-hide-search="true" data-kt-select2="true" data-kt-user-table-filter="role"
+                          data-placeholder="Select option">
+                    <option></option>
+                    <option value="Administrator">Administrator</option>
+                    <option value="Analyst">Analyst</option>
+                    <option value="Developer">Developer</option>
+                    <option value="Support">Support</option>
+                    <option value="Trial">Trial</option>
+                  </select>
+                </div>
+
+
+                <div class="mb-10">
+                  <label class="form-label fs-6 fw-bold">Two Step Verification:</label>
+                  <select class="form-select form-select-solid fw-bolder" data-allow-clear="true"
+                          data-hide-search="true" data-kt-select2="true" data-kt-user-table-filter="two-step"
+                          data-placeholder="Select option">
+                    <option></option>
+                    <option value="Enabled">Enabled</option>
+                  </select>
+                </div>
+
+
+                <div class="d-flex justify-content-end">
+                  <button class="btn btn-light btn-active-light-primary fw-bold me-2 px-6" data-kt-menu-dismiss="true"
+                          data-kt-user-table-filter="reset" type="reset">Reset
                   </button>
-                  <button (click)="deleteUser(user.id)" class="btn btn-danger btn-sm">
-                    <i class="fa fa-trash"></i> Delete
+                  <button class="btn btn-primary fw-bold px-6" data-kt-menu-dismiss="true"
+                          data-kt-user-table-filter="filter"
+                          type="submit">Apply
                   </button>
                 </div>
-              </td>
-            </tr>
-            </tbody>
-          </table>
+
+              </div>
+
+            </div>
+
+
+            <button (click)="createUser()" class="btn btn-primary" type="button">
+              <i class="fa fa-plus"></i> Add User
+            </button>
+
+          </div>
+
+
+          <div class="d-flex justify-content-end align-items-center d-none" data-kt-user-table-toolbar="selected">
+            <div class="fw-bolder me-5">
+              <span class="me-2" data-kt-user-table-select="selected_count"></span>Selected
+            </div>
+            <button class="btn btn-danger" data-kt-user-table-select="delete_selected" type="button">Delete Selected
+            </button>
+          </div>
+
         </div>
+
       </div>
+
+
+      <div class="card-body pt-0">
+
+        <table class="table align-middle table-row-dashed fs-6 gy-5" id="kt_table_users">
+
+          <thead>
+
+          <tr class="text-start text-muted fw-bolder fs-7 text-uppercase gs-0">
+            <th>SL</th>
+            <th>Name</th>
+            <th>Contact No.</th>
+            <th>Address</th>
+            <th>Status</th>
+            <th class="text-end min-w-100px">Actions</th>
+          </tr>
+
+          </thead>
+
+
+          <tbody class="text-gray-600 fw-bold">
+
+          <tr *ngFor="let user of users; let i = index;">
+            <td>{{ i + 1 }}</td>
+            <td class="d-flex align-items-center">
+
+              <div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
+                <a href="../../demo1/dist/apps/user-management/users/view.html">
+                  <div class="symbol-label">
+                    <img alt="Emma Smith" class="w-100" src="assets/media/avatars/150-1.jpg"/>
+                  </div>
+                </a>
+              </div>
+
+
+              <div class="d-flex flex-column">
+                <a class="text-gray-800 text-hover-primary mb-1"
+                   href="../../demo1/dist/apps/user-management/users/view.html">{{ user.getFullName() || '-' }}</a>
+                <span>{{ user.email || '-' }}</span>
+              </div>
+
+            </td>
+            <td>
+              {{ user.cell || '-' }}
+            </td>
+            <td>
+              {{ user.address || '-' }}
+            </td>
+            <td>
+              <ng-container *ngIf="user.status === 'Active'; else inactive">
+                <div class="badge badge-light-success fw-bolder">{{ user.status || '-' }}</div>
+              </ng-container>
+              <ng-template #inactive>
+                <div class="badge badge-light-danger fw-bolder">{{ user.status || '-' }}</div>
+              </ng-template>
+            </td>
+            <td class="text-end">
+              <a class="btn btn-light btn-active-light-primary btn-sm" data-kt-menu-flip="top-end"
+                 data-kt-menu-placement="bottom-end"
+                 data-kt-menu-trigger="click" href="#">Actions
+
+                <span class="svg-icon svg-icon-5 m-0">
+															<svg height="24px"
+                                   version="1.1" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
+																<g fill="none" fill-rule="evenodd" stroke="none" stroke-width="1">
+																	<polygon points="0 0 24 0 24 24 0 24"/>
+																	<path
+                                    d="M6.70710678,15.7071068 C6.31658249,16.0976311 5.68341751,16.0976311 5.29289322,15.7071068 C4.90236893,15.3165825 4.90236893,14.6834175 5.29289322,14.2928932 L11.2928932,8.29289322 C11.6714722,7.91431428 12.2810586,7.90106866 12.6757246,8.26284586 L18.6757246,13.7628459 C19.0828436,14.1360383 19.1103465,14.7686056 18.7371541,15.1757246 C18.3639617,15.5828436 17.7313944,15.6103465 17.3242754,15.2371541 L12.0300757,10.3841378 L6.70710678,15.7071068 Z"
+                                    fill="#000000" fill-rule="nonzero"
+                                    transform="translate(12.000003, 11.999999) rotate(-180.000000) translate(-12.000003, -11.999999)"/>
+																</g>
+															</svg>
+														</span>
+              </a>
+
+              <div
+                class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4"
+                data-kt-menu="true">
+
+                <div class="menu-item px-3">
+                  <a class="menu-link px-3" href="../../demo1/dist/apps/user-management/users/view.html">Edit</a>
+                </div>
+
+
+                <div class="menu-item px-3">
+                  <a class="menu-link px-3" data-kt-users-table-filter="delete_row" href="#">Delete</a>
+                </div>
+
+              </div>
+
+            </td>
+          </tr>
+          </tbody>
+
+        </table>
+
+      </div>
+
     </div>
+
   </div>
+
 </div>
+
