Bootstrap Theme Changed, Login Bug fixed, User Create init

--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,27 +1,27 @@
-
-<div class="footer py-4 d-flex flex-lg-column" id="kt_footer">
-
-  <div class="container-fluid d-flex flex-column flex-md-row align-items-center justify-content-between">
-
-    <div class="text-dark order-2 order-md-1">
-      <span class="text-muted fw-bold me-1">2021©</span>
-      <a href="https://keenthemes.com" target="_blank" class="text-gray-800 text-hover-primary">Keenthemes</a>
+<footer class="footer">
+  <div class="container-fluid d-flex justify-content-between">
+    <nav class="pull-left">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="http://www.themekita.com">
+            ThemeKita
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"> Help </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"> Licenses </a>
+        </li>
+      </ul>
+    </nav>
+    <div class="copyright">
+      2024, made with <i class="fa fa-heart heart text-danger"></i> by
+      <a href="http://www.themekita.com">ThemeKita</a>
     </div>
-
-
-    <ul class="menu menu-gray-600 menu-hover-primary fw-bold order-1">
-      <li class="menu-item">
-        <a href="https://keenthemes.com" target="_blank" class="menu-link px-2">About</a>
-      </li>
-      <li class="menu-item">
-        <a href="https://keenthemes.com/support" target="_blank" class="menu-link px-2">Support</a>
-      </li>
-      <li class="menu-item">
-        <a href="https://1.envato.market/EA4JP" target="_blank" class="menu-link px-2">Purchase</a>
-      </li>
-    </ul>
-
+    <div>
+      Distributed by
+      <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
+    </div>
   </div>
-
-</div>
-
+</footer>
