--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -34,7 +34,7 @@
           </div>
           <div class="text-center">
             <button type="submit" class="btn btn-primary btn-block" [disabled]="loading">
-              <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+              <span *ngIf="loading" class="spinner-grow spinner-grow-sm" role="status"></span>
               {{ loading ? 'Please wait...' : 'Login' }}
             </button>
           </div>
