--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -4,12 +4,7 @@
     <!-- Logo Header -->
     <div class="logo-header" data-background-color="dark">
       <a href="#" class="logo">
-        <img
-          src="assets/img/kaiadmin/logo_light.svg"
-          alt="navbar brand"
-          class="navbar-brand"
-          height="20"
-        />
+        <img src="assets/img/kaiadmin/logo_light.svg" alt="navbar brand" class="navbar-brand" height="20" />
       </a>
       <div class="nav-toggle">
         <button class="btn btn-toggle toggle-sidebar">
@@ -28,24 +23,20 @@
   <div class="sidebar-wrapper scrollbar scrollbar-inner">
     <div class="sidebar-content">
       <ul class="nav nav-secondary">
-        <li class="nav-item active">
-          <a
-            data-bs-toggle="collapse"
-            [routerLink]="['/dashboard']"
-            class="collapsed"
-            aria-expanded="false"
-          >
+        <li class="nav-item" routerLinkActive="active">
+          <a data-bs-toggle="collapse" [routerLink]="['/dashboard']" routerLinkActive="active" class="collapsed"
+            aria-expanded="false">
             <i class="fas fa-home"></i>
             <p>Dashboard</p>
           </a>
         </li>
         <li class="nav-section">
-                <span class="sidebar-mini-icon">
-                  <i class="fa fa-ellipsis-h"></i>
-                </span>
+          <span class="sidebar-mini-icon">
+            <i class="fa fa-ellipsis-h"></i>
+          </span>
           <h4 class="text-section">Admin</h4>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" routerLinkActive="active">
           <a data-bs-toggle="collapse" href="#user">
             <i class="fas fa-user"></i>
             <p>User</p>
@@ -53,15 +44,13 @@
           </a>
           <div class="collapse" id="user">
             <ul class="nav nav-collapse">
-              <li>
-                <a
-                  [routerLink]="['/user-create']">
+              <li routerLinkActive="active">
+                <a [routerLink]="['/user-create']" routerLinkActive="active">
                   <span class="sub-item">Add User</span>
                 </a>
               </li>
-              <li>
-                <a
-                  [routerLink]="['/user-list']">
+              <li routerLinkActive="active">
+                <a [routerLink]="['/user-list']" routerLinkActive="active">
                   <span class="sub-item">User List</span>
                 </a>
               </li>
