--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- app.component.html -->
 <div class="wrapper">
-  <ng-container *ngIf="authService.isAuthenticated | async">
+  <ng-container *ngIf="authService.isAuthenticated$ | async">
     <app-sidebar></app-sidebar>
     <div class="main-panel">
       <app-header></app-header>
@@ -35,7 +35,7 @@
       <app-footer></app-footer>
     </div>
   </ng-container>
-  <ng-container *ngIf="!(authService.isAuthenticated | async)">
+  <ng-container *ngIf="!(authService.isAuthenticated$ | async)">
     <router-outlet></router-outlet>
   </ng-container>
 </div>
