--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -73,6 +73,11 @@
           <div class="collapse" id="academy">
             <ul class="nav nav-collapse">
               <li routerLinkActive="active">
+                <a [routerLink]="['/student-list']" routerLinkActive="active">
+                  <span class="sub-item">Students</span>
+                </a>
+              </li>
+              <li routerLinkActive="active">
                 <a [routerLink]="['/faculty-list']" routerLinkActive="active">
                   <span class="sub-item">Faculties</span>
                 </a>
