--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -78,6 +78,11 @@
                 </a>
               </li>
               <li routerLinkActive="active">
+                <a [routerLink]="['/course-list']" routerLinkActive="active">
+                  <span class="sub-item">Courses</span>
+                </a>
+              </li>
+              <li routerLinkActive="active">
                 <a [routerLink]="['/faculty-list']" routerLinkActive="active">
                   <span class="sub-item">Faculties</span>
                 </a>
