--- a/src/app/academy/course/course-list/course-list.component.html
+++ b/src/app/academy/course/course-list/course-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <div class="pull-right">
-      <button class="btn btn-success" [routerLink]="['/student-form']">
+      <button class="btn btn-success" [routerLink]="['/course-form']">
         <i class="fa fa-plus"></i> Add New
       </button>
     </div>
@@ -16,37 +16,34 @@
             <thead>
             <tr>
               <th class="col-md-1">SL</th>
+              <th>Code</th>
               <th>Name</th>
-              <th>Email</th>
-              <th>Cell</th>
-              <th>Gender</th>
+              <th>Credits</th>
+              <th>Fees</th>
+              <th>Description</th>
               <th>Department</th>
-              <th>Session</th>
+              <th>Teachers</th>
               <th class="text-center col-md-1">Action</th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let student of students; let i = index;">
+            <tr *ngFor="let course of courses; let i = index;">
               <td>{{ i + 1 }}</td>
-              <td>{{ student.name || '-' }}</td>
-              <td>{{ student.email || '-' }}</td>
-              <td>{{ student.cell || '-' }}</td>
-              <td>{{ student.gender || '-' }}</td>
-              <td>{{ student.department.name || '-' }}</td>
-              <td>{{ student.session || '-' }}</td>
+              <td>{{ course.code || '-' }}</td>
+              <td>{{ course.name || '-' }}</td>
+              <td>{{ course.credits || '-' }}</td>
+              <td>{{ course.fee || '-' }}</td>
+              <td>{{ course.description || '-' }}</td>
+              <td>{{ course.department.name || '-' }}</td>
+              <td>{{ course.getTeachersNames() }}</td>
               <td class="text-center">
                 <div class="form-button-action">
-                  <button [routerLink]="['/student-view', student.id]" class="btn btn-link btn-primary btn-lg"
-                          title="View"
-                          type="button">
-                    <i class="fa fa-eye"></i>
-                  </button>
-                  <button [routerLink]="['/student-form', student.id]" class="btn btn-link btn-primary btn-lg"
+                  <button [routerLink]="['/course-form', course.id]" class="btn btn-link btn-primary btn-lg"
                           title="Edit"
                           type="button">
                     <i class="fa fa-edit"></i>
                   </button>
-                  <button (click)="deleteStudent(student.id)" class="btn btn-link btn-danger" title="Delete"
+                  <button (click)="deleteCourse(course.id)" class="btn btn-link btn-danger" title="Delete"
                           type="button">
                     <i class="fa fa-times"></i>
                   </button>
