--- a/src/app/academy/student/student-list/student-list.component.html
+++ b/src/app/academy/student/student-list/student-list.component.html
@@ -50,6 +50,9 @@
                           type="button">
                     <i class="fa fa-times"></i>
                   </button>
+                  <button [routerLink]="['/enrollment-form', student.id]" class="btn btn-xs btn-info" type="button">
+                    Enroll
+                  </button>
                 </div>
               </td>
             </tr>
