--- a/src/app/admin/user/user-view/user-view.component.html
+++ b/src/app/admin/user/user-view/user-view.component.html
@@ -1,1 +1,58 @@
-<p>user-view works!</p>
+<div class="row">
+  <div class="col-md-12 mb-2">
+    <div class="pull-right">
+      <button class="btn btn-info" [routerLink]="['/user-form', user.id]">
+        <i class="fa fa-edit"></i> Edit
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="card">
+      <div class="card-header">
+        <div class="card-title">User Profile</div>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <img *ngIf="user.avatar" [src]="user.avatar" class="img-fluid rounded-circle" alt="User Avatar">
+            <div *ngIf="!user.avatar" class="placeholder-avatar">No Avatar</div>
+          </div>
+          <div class="col-md-8">
+            <dl class="row">
+              <dt class="col-sm-4">Name:</dt>
+              <dd class="col-sm-8">{{ user.name }}</dd>
+
+              <dt class="col-sm-4">Cell:</dt>
+              <dd class="col-sm-8">{{ user.cell }}</dd>
+
+              <dt class="col-sm-4">Email:</dt>
+              <dd class="col-sm-8">{{ user.email }}</dd>
+
+              <dt class="col-sm-4">Gender:</dt>
+              <dd class="col-sm-8">{{ user.gender }}</dd>
+
+              <dt class="col-sm-4">Status:</dt>
+              <dd class="col-sm-8">{{ user.status }}</dd>
+
+              <dt class="col-sm-4">Date of Birth:</dt>
+              <dd class="col-sm-8">{{ user.dateOfBirth }}</dd>
+
+              <dt class="col-sm-4">Blood Group:</dt>
+              <dd class="col-sm-8">{{ user.bloodGroup }}</dd>
+
+              <dt class="col-sm-4">Joining Date:</dt>
+              <dd class="col-sm-8">{{ user.joiningDate }}</dd>
+
+              <dt class="col-sm-4">Address:</dt>
+              <dd class="col-sm-8">{{ user.address }}</dd>
+
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
