--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container-fluid d-flex justify-content-between">
-    <nav class="pull-left">
+    <!--<nav class="pull-left">
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link" href="http://www.themekita.com">
@@ -14,14 +14,14 @@
           <a class="nav-link" href="#"> Licenses </a>
         </li>
       </ul>
-    </nav>
+    </nav>-->
     <div class="copyright">
-      2024, made with <i class="fa fa-heart heart text-danger"></i> by
-      <a href="http://www.themekita.com">ThemeKita</a>
+      2024, developed by
+      <a href="http://www.github.com/shabab239" target="_blank">Shabab</a>
     </div>
-    <div>
+    <!--<div>
       Distributed by
       <a target="_blank" href="https://themewagon.com/">ThemeWagon</a>.
-    </div>
+    </div>-->
   </div>
 </footer>
