User List and View Loaded from Spring Boot

--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -30,7 +30,7 @@
               <td>{{ user.cell || '-' }}</td>
               <td>{{ user.email || '-' }}</td>
               <td>
-                <ng-container *ngIf="user.status === 'Active'; else inactive">
+                <ng-container *ngIf="user.status === 'ACTIVE'; else inactive">
                   <div class="badge badge-success">{{ user.status || '-' }}</div>
                 </ng-container>
                 <ng-template #inactive>
